--- a/ContinuumEngine_v0.00/ContinuumEngine_v0.00/ContinuumEngine_v0.00/ContinuumEngine_v0.00.vcxproj
+++ b/ContinuumEngine_v0.00/ContinuumEngine_v0.00/ContinuumEngine_v0.00/ContinuumEngine_v0.00.vcxproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <ClCompile Include="Engine\ContinuumEngine.cpp" />
     <ClCompile Include="Engine\Camera\Camera.cpp" />
+    <ClCompile Include="Engine\Framework\EventListener\KeyboardEventListener.cpp" />
     <ClCompile Include="Engine\GlobalElements\Debug.cpp" />
     <ClCompile Include="Engine\Main.cpp" />
     <ClCompile Include="Engine\Framework\Window\Window.cpp" />
@@ -145,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\ContinuumEngine.h" />
+    <ClInclude Include="Engine\Framework\EventListener\KeyboardEventListener.h" />
     <ClInclude Include="Engine\GameInterface.h" />
     <ClInclude Include="Engine\Renderer\GameObject\BoundaryBox\BoundaryBox.h" />
     <ClInclude Include="Engine\Camera\Camera.h" />
